# tcalc-badapple

./: .gitignore  platformio.ini  process_video.py
include/: decoder.h  gpiopin.h  lcd12864.h  lcdbase.h  sys.h  util.h
src/: decoder.cpp  delay.cpp  gpiopin.cpp  lcd12864.cpp  lcdbase.cpp  main.cpp  sys.cpp  system_stm32f10x.c  viddata.S
stm/: platformio.ini
stm/include/: delay.h  sys.h
stm/src/: delay.cpp  main.cpp  sys.cpp
vidproc/: .gitignore  CMakeLists.txt  common.h  process_video.py  vidproc.cpp  vidunproc.cpp
